# VLR

./: .gitmodules  CMakeLists.txt  README.md  VLR.sln
HostProgram/: CMakeLists.txt  GLToolkit.h  HostProgram.args.json  HostProgram.vcxproj  HostProgram.vcxproj.filters  StopWatch.h  c_compile_test.c  common.h  cpp_compile_test.cpp  dds_loader.cpp  dds_loader.h  drawOptiXResult.frag  drawOptiXResult.vert  gl_util.cpp  gl_util.h  image.cpp  image.h  image_loader.cpp  image_loader.h  imgui.ini  main.cpp  parameter.h  scene.cpp  scene.h
HostProgram/ext/include/imGui/: imgui_impl_glfw_gl3.h
HostProgram/ext/lib/: glfw3.lib
HostProgram/ext/src/imGui/: imgui.ini  imgui_impl_glfw_gl3.cpp
HostProgram/resources/environments/: WhiteOne.exr
HostProgram/resources/material_test/: grid_80p_white_18p_gray.DDS  paper.mtl
HostProgram/resources/ptxes/: cameras.ptx  materials.ptx  path_tracing.ptx  triangle_intersection.ptx
HostProgram/resources/shaders/: drawOptiXResult.frag  scale.frag
HostProgram/shaders/: drawOptiXResult.frag
Init/: Init.vcxproj  main.cpp
libVLR/: CMakeLists.txt  VLR.cpp  basic_types_internal.h  common.cpp  common_internal.h  connectable.cpp  connectable.h  context.cpp  context.h  cuda_util.h  debugPrintf.cpp  image.cpp  image.h  libVLR.vcxproj  libVLR.vcxproj.filters  materials.cpp  materials.h  optix_util.cpp  optix_util.h  optix_util_private.h  queryable.cpp  queryable.h  rgb_spectrum_types.h  scene.cpp  scene.h  scene_private.h  shader_nodes.cpp  shader_nodes.h  shared.h  slot_finder.cpp  slot_finder.h  slot_manager.cpp  slot_manager.h  spectrum_base.cpp  spectrum_base.h  spectrum_types.cpp  textures.cpp  textures.h  vlr.cpp  vlrDevPrintf.cpp
libVLR/GPU_kernels/: aux_buffer_generator.cu  cameras.cu  cast_rays.cu  convert_to_rgb.cu  debug_rendering.cu  infinite_sphere.cu  infinite_sphere_intersection.cu  kernel_common.cuh  light_tracing.cu  light_transport_common.cuh  lvc_bpt.cu  materials.cu  path_tracing.cu  point.cu  post_process.cu  random_distributions.cuh  renderer_common.cuh  setup_scene.cu  shader_nodes.cu  triangle.cu  triangle_intersection.cu
libVLR/include/VLR/: VLR.h  VLRCpp.h  VLRpp.h  basic_types.h  common.h  public_types.h  scene.h
libVLR/include/VLR_/: public_types.h  vlr_.h
libVLR/include/vlr/: basic_types.h  common.h  public_types.h  vlr.h  vlrcpp.h
libVLR/shared/: basic_types_internal.h  common_internal.h  kernel_common.h  light_transport_common.h  random_distributions.h  renderer_common.h  rgb_spectrum_types.h  shared.h  spectrum_base.cpp  spectrum_base.h  spectrum_types.cpp  spectrum_types.h
libVLR/util/: cuda_util.cpp  cuda_util.h  optix_util.cpp  optix_util.h  optix_util_private.h
libVLR/utils/: cuda_util.cpp  cuda_util.h  optix_util.cpp  optix_util.h  optix_util_private.h  optixu_on_cudau.h
